--- a/app/src/main/res/layout/rv_cards_magne.xml
+++ b/app/src/main/res/layout/rv_cards_magne.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        app:cardElevation="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:cardElevation="5dp">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/closeButton"
@@ -18,10 +15,10 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:src="@android:drawable/ic_menu_close_clear_cancel"
-            app:tint="#FFFFFF"
-            app:fabCustomSize="25dp"
             app:backgroundTint="#FF3232"
-            app:fabSize="normal" />
+            app:fabCustomSize="25dp"
+            app:fabSize="normal"
+            app:tint="#FFFFFF" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,8 +43,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Nombre"
-                    android:textStyle="bold"
-                    android:textAppearance="?attr/textAppearanceBody1" />
+                    android:textAppearance="?attr/textAppearanceBody1"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textGender"
@@ -63,18 +60,21 @@
                     android:layout_height="wrap_content"
                     android:text="Ciudad"
                     android:textAppearance="?attr/textAppearanceBody2" />
+
                 <TextView
                     android:id="@+id/textCountry"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="País"
                     android:textAppearance="?attr/textAppearanceBody2" />
+
                 <TextView
                     android:id="@+id/textEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Email"
                     android:textAppearance="?attr/textAppearanceBody2" />
+
                 <TextView
                     android:id="@+id/textPhone"
                     android:layout_width="match_parent"
@@ -87,4 +87,4 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
